--- a/app/src/main/res/layout/student_item.xml
+++ b/app/src/main/res/layout/student_item.xml
@@ -2,6 +2,9 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
+        <variable
+            name="item"
+            type="com.example.exampleweek7.db.Student" />
     </data>
 
     <LinearLayout
@@ -10,10 +13,11 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/tvName"
             style="@style/word_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="@{item.name}"
             android:background="@android:color/holo_orange_light" />
     </LinearLayout>
 </layout>
